--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
     "linebreak": "^1.0.2",
     "pdfkit": "^0.10.0"
